--- a/hello.ipynb
+++ b/hello.ipynb
@@ -43,20 +43,20 @@
     "for i in range(3) :\n",
     "    print('Hello World!!!')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"\")"
-   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "27cc1592400a49e29347d731bddc25ead99330001d369613af25ccd9674a593a"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 ('base')",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
