파일구조 변경

--- a/Day01/hello.ipynb
+++ b/Day01/hello.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hello World"
+    "# Unit 4. 기본 문법"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.1 세미콜론"
    ]
   },
   {
@@ -21,27 +28,41 @@
     }
    ],
    "source": [
-    "print(\"Hello World\")"
+    "print(\"Hello World\");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World!!!\n",
-      "Hello World!!!\n",
-      "Hello World!!!\n"
+      "Hello \n",
+      "World\n"
      ]
     }
    ],
    "source": [
-    "for i in range(3) :\n",
-    "    print('Hello World!!!')"
+    "print(\"Hello \"); print('World')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.2 주석(Comment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 한줄짜리 주석\n"
    ]
   }
  ],
@@ -55,7 +76,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
   "orig_nbformat": 4
