23일 중간 커밋

--- a/Day01/hello.ipynb
+++ b/Day01/hello.ipynb
@@ -58,12 +58,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 한줄짜리 주석\n",
+    "print('Hello World') # 문장 뒤에 와도 됩니다."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 한줄짜리 주석\n"
+    "#Alt Shitf A -> 여러줄의 스트링(문자열) ''' ''', \"\"\" \"\"\"\n",
+    "''' 더하기\n",
+    "a = 1 + 2\n",
+    "print('hello. world') '''\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.3 들여쓰기(Indentation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a는 10입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "if a == 10 :\n",
+    "    print('a는 10입니다.')\n",
+    "else :\n",
+    "    print('a는 10이 아닙니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a는 10입니다.\n",
+      "a는 10이 아닙니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "if a == 10 :\n",
+    "    print('a는 10입니다.')\n",
+    "else :\n",
+    "    a = 20\n",
+    "print('a는 10이 아닙니다.') # 공백 4칸을 지키지 않았기 때문에 출력되었다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.4 코드 블록\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 블록 후 tab 또는 shift tab키를 사용하면 들여쓰기를 맞출 수 있다.\n",
+    "if a == 10:\n",
+    "    print('10')\n",
+    "    print('입니다.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
