--- a/Day01/u06변수.ipynb
+++ b/Day01/u06변수.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "(20, 10)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "(10, 20, 30)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "30"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "50"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -168,15 +168,15 @@
    ],
    "source": [
     "# 1에서 100까지 합 구하기\n",
-    "sum = 0\n",
+    "sum1 = 0\n",
     "for i in range(1, 101):\n",
-    "    sum += i\n",
-    "print(sum)"
+    "    sum1 += i\n",
+    "print(sum1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -196,11 +196,253 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.3입력(input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('10', str)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = input()\n",
+    "x, type(x) #input은 항상 문자열을 받는다!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20, int)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = int(input('정수를 입력하세요 > '))#정수형으로 형변환\n",
+    "number, type(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "1011\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"첫번째 숫자를 입력하세요 : \"))\n",
+    "b = int(input(\"두번째 숫자를 입력하세요 : \"))\n",
+    "print(a+b)\n",
+    "a = input(\"첫번째 숫자를 입력하세요 : \")\n",
+    "b = input(\"두번째 숫자를 입력하세요 : \")\n",
+    "print(a+b)#문자열에서 +는 문자열 연결입니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.4 입력값 두개 받기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['10', '20']"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#스트링 split() method\n",
+    "'10 20'.split() #공백으로 분리하여 두개의 문자열이 리스트로 반환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('10', '20')"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a, b = '10 20'.split()\n",
+    "a, b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('10', '20')"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a, b = input('두개의 숫자를 입력하세요.').split()\n",
+    "a, b\n",
+    "#int(a) + int(b)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# map\n",
+    "list(map(int, ['10', '20'])) #int('10') int(\"20\") --> [10, 20] --- 리스트 각각의 원소에 대해서 int(함수)를 적용해라"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 20, 30)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a, b = map(int, input('두개의 숫자를 입력하세요').split())\n",
+    "a, b, a+b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#숫자 3개를 ,로 분리하여 입력으로 받아 합계를 구하시오\n",
+    "a, b, c = map(int, input('숫자 3개를 ,를 사용하여 입력하시오').split(','))\n",
+    "a+b+c\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 30]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#숫자 N개를 받아서 합계와 평균을 구하는 방법\n",
+    "numbers = list(map(int, input('숫자 n개를 입력하시오').split()))\n",
+    "numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60, 20.0)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(numbers), sum(numbers)/len(numbers)"
+   ]
   }
  ],
  "metadata": {
