--- a/Day02/심사문제.ipynb
+++ b/Day02/심사문제.ipynb
@@ -27,15 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(-10, -7, -4, -1, 2, 5, 8)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "range(0, 5)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -47,21 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('1', '2', '3', '4', '5')\n"
+      "('1', '23')\n"
      ]
     }
    ],
    "source": [
     "# 11장 심사문제 1\n",
-    "x=input().split()\n",
-    "x=x[0:-5]\n",
+    "x=input().split()[0:-5]\n",
     "print(tuple(x))"
    ]
   },
