28일 강의내용 푸쉬

--- a/Day03/25일심사문제.ipynb
+++ b/Day03/25일심사문제.ipynb
@@ -43,6 +43,7 @@
     "# 14 심사문제\n",
     "kor, eng, mat, sc = map(int, input().split())\n",
     "avg = (kor+eng+mat+sc)/4\n",
+    "#리스트로 값을 받아 최솟값 최댓값이 0보다 큰지 100보다 작은지 검사 할 수 있다.\n",
     "if(0<=kor<=100 and 0<=eng<=100 and 0<=mat<=100 and 0<=sc<=100):\n",
     "    if(avg>=80):\n",
     "        print(\"합격\")\n",
@@ -131,6 +132,7 @@
    "source": [
     "# 17 심사문제\n",
     "bal = int(input())\n",
+    "#1350을 변수 fare에 저장해서 가독성을 높일 수 있다.\n",
     "while bal>=1350:\n",
     "    bal-=1350\n",
     "    print(bal)"
@@ -155,7 +157,7 @@
     "i = start\n",
     "\n",
     "while True:\n",
-    "    if(i==stop):\n",
+    "    if(i==stop):#i>stop\n",
     "        break\n",
     "    \n",
     "    if(i%10==3):\n",
@@ -214,6 +216,34 @@
     "start, stop=map(int,input().split())\n",
     "for i in range(start, stop):\n",
     "    print('Fizz'*(i%5==0) + 'Buzz'*(i%7==0) or i, end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "28\n",
+      "496\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 연습문제\n",
+    "#1에서 1000까지 완전수를 찾아라\n",
+    "\n",
+    "for i in range(2, 1001):\n",
+    "    sum1 = 0\n",
+    "    for k in range(1, i):\n",
+    "        if  i % k == 0:\n",
+    "            sum1 += k\n",
+    "    if sum1 == i :\n",
+    "        print(i)"
    ]
   },
   {
