--- a/Day06/심사문제.ipynb
+++ b/Day06/심사문제.ipynb
@@ -2,14 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['dictator', 'subjects', 'change', 'costume', 'elegance', 'accepted']\n"
+      "['dictator', 'subjects', 'change', 'costume', 'elegance', 'accepted']\n",
+      "<class 'list'>\n",
+      "dictator\n",
+      "subjects\n",
+      "change\n",
+      "costume\n",
+      "elegance\n",
+      "accepted\n"
      ]
     }
    ],
@@ -28,7 +35,15 @@
     "    if 'c' in i:\n",
     "        c.append(i)\n",
     "print(c)\n",
-    "\n"
+    "\n",
+    "#다른 코딩\n",
+    "with open('words.txt', 'r') as f:\n",
+    "    words = f.read()\n",
+    "\n",
+    "for word in words.split() :\n",
+    "    word = word.strip(',.')\n",
+    "    if 'c' in word:\n",
+    "        print(word)\n"
    ]
   },
   {
@@ -75,7 +90,7 @@
     "def calc(x, y):\n",
     "    return x+y, x-y, x*y, x/y\n",
     "a, s, m, d = calc(x, y)\n",
-    "print('덧셈: {0}, 뺄셈: {1}, 곱셈: {2}, 나눗셈: {3}'.format(a, s, m, d))"
+    "print('덧셈: {0}, 뺄셈: {1}, 곱셈: {2}, 나눗셈: {3}'.format(a, s, m, d))\n"
    ]
   },
   {
@@ -138,23 +153,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['001jpg', '010png', '011png', '002jpg', '003png']\n"
+      "['001.jpg', '010.png', '011.png', '002.jpg', '003.png']\n",
+      "['001.jpg', '010.png', '011.png', '002.jpg', '003.png']\n"
      ]
     }
    ],
    "source": [
     "# 32\n",
     "\n",
+    " # 1.jpg 10.png 11.png 2.jpg 3.png\n",
     "files = input().split()\n",
     " \n",
-    "print(list(map(lambda x : '{0:03d}'.format(int(x.split('.')[0])) + x.split('.')[1],files)))"
+    "print(list(map(lambda x : '{0:03d}'.format(int(x.split('.')[0])) + '.' + x.split('.')[1],files)))\n",
+    "print(list(map(lambda x: f\"{int(x.split('.')[0]):03d}.{x.split('.')[1]}\", files)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['123', '123', '123'] ['abc', 'abc', 'abc']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "cars=['abc 123','abc 123','abc 123']\n",
+    "list1=list(map(lambda car: car.split()[0], cars))\n",
+    "list2=list(map(lambda car: car.split()[1], cars))\n",
+    "\n",
+    "# for car in cars:\n",
+    "#     list1.append(car.split()[0])\n",
+    "#     list2.append(car.split()[1])\n",
+    "\n",
+    "print(list2, list1)"
    ]
   },
   {
